lib/kitt/tmpl/apps/kyso-api/svc_map.yaml
# The first service will be removed, it is used only while moving from kitt 1.x
# to 2.x (it is needed if kyso-api is updated before kyso-scs, as we have
# changed the service name removing the '-svc' suffix)
apiVersion: v1
kind: Service
metadata:
  name: kyso-api-svc
  namespace: __NAMESPACE__
spec:
  type: ExternalName
  externalName: kyso-api
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: __NAMESPACE__
spec:
  type: ExternalName
  externalName: __ELASTICSEARCH_SVC_HOSTNAME__
  ports:
  - name: elastisearch
    port: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: kyso-nbdime
  namespace: __NAMESPACE__
spec:
  type: ExternalName
  externalName: __KYSO_NBDIME_SVC_HOSTNAME__
  ports:
  - name: http
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kyso-scs
  namespace: __NAMESPACE__
spec:
  type: ExternalName
  externalName: __KYSO_SCS_SVC_HOSTNAME__
  ports:
  - name: sftp
    port: 22
  - name: indexer
    port: 8080
  - name: webhook
    port: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: __NAMESPACE__
spec:
  type: ExternalName
  externalName: __NATS_SVC_HOSTNAME__
  ports:
  - name: nats
    port: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: __NAMESPACE__
spec:
  type: ExternalName
  externalName: __MONGODB_SVC_HOSTNAME__
  ports:
  - name: mongodb
    port: 27017
