lib/kitt/tmpl/apps/kyso-api/ingress-docs.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: __APP__-docs-ingress
  namespace: __NAMESPACE__
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: __BASIC_AUTH__
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "__FORCE_SSL_REDIRECT__"
  labels:
    app.kubernetes.io/name: __APP__
spec:
  ingressClassName: nginx
  rules:
# BEG: HOSTNAME_RULE
  - host: '__HOSTNAME__'
    http:
      paths:
      - path: /api/docs
        pathType: Prefix
        backend:
          service:
            name: __APP__-svc
            port:
              number: 80
      - path: /api/redoc
        pathType: Prefix
        backend:
          service:
            name: __APP__-svc
            port:
              number: 80
# END: HOSTNAME_RULE
  tls:
# BEG: HOSTNAME_TLS
  - hosts:
    - '__HOSTNAME__'
    secretName: '__HOSTNAME__'
# END: HOSTNAME_TLS
